fix: add missing java modules to Dockerfile